Add index page template with Handlebars

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.1"
+axum = { version = "0.8.1", features = ["macros"] }
+handlebars = "6.3.1"
 tokio = { version="1.44.0", features=["full"] }
